--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts --target https://steamcommunity.com/market/listings/730/Clutch%20Case"
+    "start": "ts-node index.ts --target https://steamcommunity.com/market/listings/730/%E2%98%85%20Butterfly%20Knife%20%7C%20Freehand%20%28Minimal%20Wear%29"
   },
   "dependencies": {
     "@types/node": "^17.0.41",
